# whaler

./: .editorconfig  .gitignore  README.md  com.github.sdv43.whaler.yml  meson.build  uncrustify.cfg
data/: app.desktop  app.metainfo.xml  com.github.sdv43.whaler.appdata.xml.in  com.github.sdv43.whaler.desktop.in  gresource.xml  gschema.xml  meson.build
data/style/: _main.scss  _tools.scss  watch.sh
data/style/variants/: elementary-dark.scss  elementary-light.scss
meson/: compile_styles.py
po/: LINGUAS  POTFILES  com.github.sdv43.whaler.pot  cs.po  en.po  fr.po  it.po  meson.build  ru.po
src/: Application.vala  meson.build
src/Docker/: ApiClient.vala  Client.vala  Command.vala  ContainerLogWatcher.vala
src/State/: Root.vala  ScreenDockerContainer.vala  ScreenMain.vala
src/Utils/: Constants.vala  Constants.vala.in  DockerContainer.vala  Helpers.vala  HttpClient.vala  Theme.vala
src/Utils/DataEntities/: Container.vala
src/Utils/Sorting/: SortingInterface.vala  SortingName.vala  SortingStatus.vala  SortingType.vala
src/Widgets/: HeaderBar.vala  ScreenDockerContainer.vala  ScreenError.vala  ScreenMain.vala  ScreenManager.vala
src/Widgets/Screens/DockerContainer/: Log.vala  LogOutput.vala  SideBar.vala  SideBarItem.vala  SideBarSeparator.vala  TopBar.vala  TopBarActions.vala
src/Widgets/Screens/Main/: ContainerCard.vala  ContainerCardActions.vala  ContainersGrid.vala  ContainersGridFilter.vala  FilterBar.vala
src/Widgets/Utils/: ConfirmationDialog.vala  ContainerInfoDialog.vala  DockerContainerStatusLabel.vala  SettingsDialog.vala
