sources = files(
    'Application.vala',

    'Utils/Constants.vala',
    'Utils/Helpers.vala',
    'Utils/Theme.vala',
    'Utils/DataEntities/Container.vala',
    'Utils/Sorting/SortingInterface.vala',
    'Utils/Sorting/SortingName.vala',
    'Utils/Sorting/SortingType.vala',

    'State/Root.vala',
    'State/ScreenMain.vala',
    'State/ScreenDockerContainer.vala',
    
    'Widgets/Utils/ConfirmationDialog.vala',

    'Widgets/HeaderBar.vala',
    'Widgets/ScreenManager.vala',
    'Widgets/ScreenError.vala',
    'Widgets/ScreenMain.vala',
    'Widgets/ScreenDockerContainer.vala',

    'Widgets/Screens/Main/FilterBar.vala',
    'Widgets/Screens/Main/ContainersGrid.vala',
    'Widgets/Screens/Main/ContainerCard.vala',

    'Widgets/Screens/DockerContainer/TopBar.vala',
    'Widgets/Screens/DockerContainer/SideBar.vala',
    'Widgets/Screens/DockerContainer/SideBarItem.vala',
    'Widgets/Screens/DockerContainer/SideBarSeparator.vala',
    'Widgets/Screens/DockerContainer/Log.vala',
    'Widgets/Screens/DockerContainer/LogOutput.vala',

    'Docker/Client.vala',
    'Docker/Command.vala',
    'Docker/ContainerLogWatcher.vala',
)