sources = files(
    'Application.vala',

    'Utils/DockerContainer.vala',
    'Utils/HttpClient.vala',
    'Utils/Constants.vala',
    'Utils/Helpers.vala',
    'Utils/Theme.vala',
    'Utils/Sorting/SortingInterface.vala',
    'Utils/Sorting/SortingName.vala',
    'Utils/Sorting/SortingType.vala',

    'State/Root.vala',
    'State/ScreenMain.vala',
    'State/ScreenDockerContainer.vala',
    
    'Widgets/HeaderBar.vala',
    'Widgets/ScreenManager.vala',
    'Widgets/ScreenError.vala',
    'Widgets/ScreenMain.vala',
    'Widgets/ScreenDockerContainer.vala',

    'Widgets/Screens/Main/ContainersGrid.vala',
    'Widgets/Screens/Main/ContainersGridFilter.vala',
    'Widgets/Screens/Main/ContainerCard.vala',
    'Widgets/Screens/Main/ContainerCardActions.vala',

    'Widgets/Screens/DockerContainer/TopBar.vala',
    'Widgets/Screens/DockerContainer/TopBarActions.vala',
    'Widgets/Screens/DockerContainer/SideBar.vala',
    'Widgets/Screens/DockerContainer/SideBarItem.vala',
    'Widgets/Screens/DockerContainer/SideBarSeparator.vala',
    'Widgets/Screens/DockerContainer/Log.vala',
    'Widgets/Screens/DockerContainer/LogOutput.vala',

    'Widgets/Utils/ConfirmationDialog.vala',

    'Docker/ApiClient.vala',
    'Docker/ContainerLogWatcher.vala',
)